# backends-for-openbb

./: README.md
advanced_examples/form_parameter/: main.py
advanced_examples/parameters_example/: widgets.json
advanced_examples/tv_charting/: README.md  main.py
apps/: README.md
apps/DTCC Trade Repository/: README.md  pyproject.toml
apps/demo-risk/: README.md
apps/dtcc_trade_repository/: README.md
apps/openbb_swaps/app/: app.py
database_connection_examples/snowflake_connector_python/: README.md
demo-apps/databento/: pyproject.toml
demo-apps/databento/openbb_databento/: README.md  apps.json  widgets.json
demo-apps/demo-risk/: README.md
demo-apps/demo-risk/demo_risk/: app.py
demo-apps/dtcc_trade_repository/: pyproject.toml
demo-apps/dtcc_trade_repository/openbb_swaps/: main.py
getting-started/reference-backend/: apps.json  main.py
getting-started/simple-backend/: README.md  main.py  templates.json
getting-started/template-backend/: registry.py
widget-examples/parameters-types/parameters_example/: main.py  widgets.json
widget-examples/widget-types/chart_widget/: main.py  widgets.json
widget-examples/widget-types/multi_file_viewer/: main.py  (+2 more)
widget_examples/advanced_charting/: main.py  widgets.json
widget_examples/great_widget/: main.py  widgets.json
widget_examples/llm_widget/: main.py  models.py  widgets.json
widget_examples/multi_file_viewer/: main.py  widgets.json
widget_examples/news_widget/: main.py  widgets.json
widget_examples/newsfeed/: main.py  widgets.json
widget_examples/prompt_widget/: main.py  widgets.json
(+14 files in other folders)
