[tool.poetry]
name = "openbb-swaps"
version = "0.0.1"
description = "An empty OpenBB Router extension"
authors = ["OpenBB Team <hello@openbb.co>"]
readme = "README.md"
packages = [{ include = "openbb_swaps" }]

[tool.poetry.dependencies]
python = "^3.9.21,<3.13"
openbb-core = "^1.4.4"
openbb-platform-api = "^1.1.5"
openbb-store = { version = "^0.1.2", extras = ["excel"] }

[tool.poetry.scripts]
openbb-swaps = "openbb_swaps.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
